start populating DB (WIP) - days and months done