@@ -27,7 +27,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 /**
- * 📌 GarminServiceTest - Unit tests for GarminService.
+ * 📌 GarminProcessingServiceTest - Unit tests for GarminProcessingService.
 
  * 1️⃣ Tests for `processAndSaveSummary` (Generic Method)
  *    - ✅ `givenValidData_whenProcessAndSaveSummary_thenSavesSuccessfully`
@@ -55,9 +55,8 @@ import static org.mockito.Mockito.*;
  *    - ✅ `givenValidData_whenProcessAndSaveRecentDailySummaries_thenSavesSuccessfully`
  *    - ❌ `givenNoData_whenProcessAndSaveRecentDailySummaries_thenLogsWarningAndSkipsSaving`
  */
-
 @ExtendWith(MockitoExtension.class)
-class GarminServiceTest {
+class GarminProcessingServiceTest {
 
    @Mock
    private GarminSQLiteRepo garminSQLiteRepo;
@@ -71,15 +70,17 @@ class GarminServiceTest {
    @Mock
    private WeeklySummaryRepo weeklySummaryRepo;
 
-   @Mock MonthlySummaryRepo monthlySummaryRepo;
+   @Mock
+   private MonthlySummaryRepo monthlySummaryRepo;
 
-   @Mock YearlySummaryRepo yearlySummaryRepo;
+   @Mock
+   private YearlySummaryRepo yearlySummaryRepo;
 
    @Mock
    private ValidationService validationService;
 
    @InjectMocks
-   private GarminService garminService;
+   private GarminProcessingService garminProcessingService;
 
    // Fields to hold the parsed mock data
    private List<Map<String, Object>> mockSQLiteDataDay;
@@ -89,10 +90,6 @@ class GarminServiceTest {
 
    @BeforeEach
    void setUp() throws IOException {
-      // Reset mocks if needed
-      // (Assuming you're using Mockito's reset() as required)
-      // reset(garminSQLiteRepo, currentDaySummaryRepo, weeklySummaryRepo, monthlySummaryRepo, yearlySummaryRepo, validationService);
-
       // Load daily summary mock data
       String jsonDayData = new String(Files.readAllBytes(Paths.get("src/test/resources/mocks/models/sqlite_mock_days_summary.json")));
       mockSQLiteDataDay = DataParsingUtils.JsonUtils.parseJsonToList(jsonDayData);
@@ -110,29 +107,30 @@ class GarminServiceTest {
       mockSQLiteDataYear = DataParsingUtils.JsonUtils.parseJsonToList(jsonYearData);
    }
 
-
    /**
     * ✅ Test Case: Given valid data, when processAndSaveSummary is called, then data is saved successfully.
+    *
+    * Note: The service uses the repository method saveAll() (instead of save()) to persist a list of summaries.
     */
    @Test
    void givenValidData_whenProcessAndSaveSummary_thenSavesSuccessfully() {
       String databaseName = "testDB";
       String tableName = "daily_summary";
 
-
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(mockSQLiteDataDay);
 
-      garminService.processAndSaveCurrentDaySummary(databaseName, tableName);
+      garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName);
 
-      // Capture the saved entity
-      ArgumentCaptor<CurrentDaySummary> captor = ArgumentCaptor.forClass(CurrentDaySummary.class);
-      verify(currentDaySummaryRepo).save(captor.capture());
+      // Capture the list of saved entities using saveAll().
+      ArgumentCaptor<List<CurrentDaySummary>> captor = ArgumentCaptor.forClass(List.class);
+      verify(currentDaySummaryRepo).saveAll(captor.capture());
 
-      CurrentDaySummary savedSummary = captor.getValue();
-      assertNotNull(savedSummary);
+      List<CurrentDaySummary> savedSummaries = captor.getValue();
+      assertNotNull(savedSummaries, "The saved summaries list should not be null");
+      assertFalse(savedSummaries.isEmpty(), "The saved summaries list should not be empty");
 
-      // Ensure validation was called before saving
-      verify(validationService).validate(savedSummary);
+      // Ensure that validation was called on each saved summary before saving.
+      savedSummaries.forEach(summary -> verify(validationService).validate(summary));
    }
 
    /**
@@ -146,13 +144,13 @@ class GarminServiceTest {
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(List.of());
 
       GarminProcessingException exception = assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveCurrentDaySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName));
 
       assertEquals("No data found in table: daily_summary", exception.getMessage());
    }
 
    /**
-    * ❌ Test Case: Given invalid data, when processAndSaveSummary is called, then validation exception is thrown.
+    * ❌ Test Case: Given invalid data, when processAndSaveSummary is called, then a validation exception is thrown.
     */
    @Test
    void givenInvalidData_whenProcessAndSaveSummary_thenThrowsValidationException() {
@@ -164,7 +162,7 @@ class GarminServiceTest {
           .when(validationService).validate(any(CurrentDaySummary.class));
 
       assertThrows(RuntimeException.class, () ->
-          garminService.processAndSaveCurrentDaySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName));
    }
 
    /**
@@ -178,7 +176,7 @@ class GarminServiceTest {
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenThrow(new RuntimeException("Database error"));
 
       assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveCurrentDaySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName));
    }
 
    /**
@@ -191,17 +189,18 @@ class GarminServiceTest {
 
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(mockSQLiteDataDay);
 
-      garminService.processAndSaveCurrentDaySummary(databaseName, tableName);
+      garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName);
 
-      // Capture the saved entity
-      ArgumentCaptor<CurrentDaySummary> captor = ArgumentCaptor.forClass(CurrentDaySummary.class);
-      verify(currentDaySummaryRepo).save(captor.capture());
+      // Capture the saved list using saveAll().
+      ArgumentCaptor<List<CurrentDaySummary>> captor = ArgumentCaptor.forClass(List.class);
+      verify(currentDaySummaryRepo).saveAll(captor.capture());
 
-      CurrentDaySummary savedSummary = captor.getValue();
-      assertNotNull(savedSummary);
+      List<CurrentDaySummary> savedSummaries = captor.getValue();
+      assertNotNull(savedSummaries, "The saved summaries list should not be null");
+      assertFalse(savedSummaries.isEmpty(), "The saved summaries list should not be empty");
 
-      // Ensure validation was called before saving
-      verify(validationService).validate(savedSummary);
+      // Ensure validation was called on each saved summary.
+      savedSummaries.forEach(summary -> verify(validationService).validate(summary));
    }
 
    /**
@@ -215,7 +214,7 @@ class GarminServiceTest {
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(List.of());
 
       GarminProcessingException exception = assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveCurrentDaySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveCurrentDaySummary(databaseName, tableName));
 
       assertEquals("No data found in table: daily_summary", exception.getMessage());
    }
@@ -230,18 +229,19 @@ class GarminServiceTest {
 
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(mockSQLiteDataWeek);
 
-      garminService.processAndSaveWeeklySummary(databaseName, tableName);
+      garminProcessingService.processAndSaveWeeklySummary(databaseName, tableName);
 
-      // Capture the saved entity
-      ArgumentCaptor<WeeklySummary> captor = ArgumentCaptor.forClass(WeeklySummary.class);
-      verify(weeklySummaryRepo).save(captor.capture());
+      // Capture the saved list using saveAll().
+      ArgumentCaptor<List<WeeklySummary>> captor = ArgumentCaptor.forClass(List.class);
+      verify(weeklySummaryRepo).saveAll(captor.capture());
 
-      WeeklySummary savedSummary = captor.getValue();
-      assertNotNull(savedSummary);
-      assertNotNull(savedSummary.firstDay()); // Ensures the correct date field is properly set
-
-      // Ensure validation was called before saving
-      verify(validationService).validate(savedSummary);
+      List<WeeklySummary> savedSummaries = captor.getValue();
+      assertNotNull(savedSummaries, "The saved weekly summaries list should not be null");
+      assertFalse(savedSummaries.isEmpty(), "The saved weekly summaries list should not be empty");
+      savedSummaries.forEach(summary -> {
+         assertNotNull(summary.firstDay(), "Weekly summary must have a firstDay set");
+         verify(validationService).validate(summary);
+      });
    }
 
    /**
@@ -255,7 +255,7 @@ class GarminServiceTest {
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(List.of());
 
       GarminProcessingException exception = assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveWeeklySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveWeeklySummary(databaseName, tableName));
 
       assertEquals("No data found in table: weekly_summary", exception.getMessage());
    }
@@ -268,21 +268,22 @@ class GarminServiceTest {
       String databaseName = "testDB";
       String tableName = "monthly_summary";
 
-      // Use the monthly mock data
+      // Use the monthly mock data.
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(mockSQLiteDataMonth);
 
-      garminService.processAndSaveMonthlySummary(databaseName, tableName);
+      garminProcessingService.processAndSaveMonthlySummary(databaseName, tableName);
 
-      // Capture the saved entity
-      ArgumentCaptor<MonthlySummary> captor = ArgumentCaptor.forClass(MonthlySummary.class);
-      verify(monthlySummaryRepo).save(captor.capture());
+      // Capture the saved list using saveAll().
+      ArgumentCaptor<List<MonthlySummary>> captor = ArgumentCaptor.forClass(List.class);
+      verify(monthlySummaryRepo).saveAll(captor.capture());
 
-      MonthlySummary savedSummary = captor.getValue();
-      assertNotNull(savedSummary);
-      assertNotNull(savedSummary.firstDay()); // Ensures the date field is correctly set
-
-      // Ensure validation was called before saving
-      verify(validationService).validate(savedSummary);
+      List<MonthlySummary> savedSummaries = captor.getValue();
+      assertNotNull(savedSummaries, "The saved monthly summaries list should not be null");
+      assertFalse(savedSummaries.isEmpty(), "The saved monthly summaries list should not be empty");
+      savedSummaries.forEach(summary -> {
+         assertNotNull(summary.firstDay(), "Monthly summary must have a firstDay set");
+         verify(validationService).validate(summary);
+      });
    }
 
    /**
@@ -293,11 +294,11 @@ class GarminServiceTest {
       String databaseName = "testDB";
       String tableName = "monthly_summary";
 
-      // Return an empty list to simulate no data
+      // Return an empty list to simulate no data.
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(List.of());
 
       GarminProcessingException exception = assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveMonthlySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveMonthlySummary(databaseName, tableName));
 
       assertEquals("No data found in table: monthly_summary", exception.getMessage());
    }
@@ -310,21 +311,22 @@ class GarminServiceTest {
       String databaseName = "testDB";
       String tableName = "yearly_summary";
 
-      // Use the yearly mock data
+      // Use the yearly mock data.
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(mockSQLiteDataYear);
 
-      garminService.processAndSaveYearlySummary(databaseName, tableName);
+      garminProcessingService.processAndSaveYearlySummary(databaseName, tableName);
 
-      // Capture the saved entity
-      ArgumentCaptor<YearlySummary> captor = ArgumentCaptor.forClass(YearlySummary.class);
-      verify(yearlySummaryRepo).save(captor.capture());
+      // Capture the saved list using saveAll().
+      ArgumentCaptor<List<YearlySummary>> captor = ArgumentCaptor.forClass(List.class);
+      verify(yearlySummaryRepo).saveAll(captor.capture());
 
-      YearlySummary savedSummary = captor.getValue();
-      assertNotNull(savedSummary);
-      assertNotNull(savedSummary.firstDay()); // Ensure the date field is correctly set
-
-      // Ensure validation was called before saving
-      verify(validationService).validate(savedSummary);
+      List<YearlySummary> savedSummaries = captor.getValue();
+      assertNotNull(savedSummaries, "The saved yearly summaries list should not be null");
+      assertFalse(savedSummaries.isEmpty(), "The saved yearly summaries list should not be empty");
+      savedSummaries.forEach(summary -> {
+         assertNotNull(summary.firstDay(), "Yearly summary must have a firstDay set");
+         verify(validationService).validate(summary);
+      });
    }
 
    /**
@@ -335,11 +337,11 @@ class GarminServiceTest {
       String databaseName = "testDB";
       String tableName = "yearly_summary";
 
-      // Return an empty list to simulate no data
+      // Return an empty list to simulate no data.
       when(garminSQLiteRepo.fetchTableData(databaseName, tableName)).thenReturn(List.of());
 
       GarminProcessingException exception = assertThrows(GarminProcessingException.class, () ->
-          garminService.processAndSaveYearlySummary(databaseName, tableName));
+          garminProcessingService.processAndSaveYearlySummary(databaseName, tableName));
 
       assertEquals("No data found in table: yearly_summary", exception.getMessage());
    }
@@ -347,10 +349,13 @@ class GarminServiceTest {
    /**
     * ✅ Test Case: Given valid data and a valid reference date, when processAndSaveRecentDailySummaries is called,
     * then data is saved successfully.
+    *
+    * Note: The models stored in MongoDB use a LocalDate for the date fields.
+    * When converting to DTOs for output, these dates are transformed to ISO string format.
     */
    @Test
    void givenValidData_whenProcessAndSaveRecentDailySummaries_thenSavesSuccessfully() throws IOException {
-      // Configure ObjectMapper to handle Java 8 date/time types
+      // Configure ObjectMapper to handle Java 8 date/time types.
       ObjectMapper mapper = new ObjectMapper();
       mapper.registerModule(new JavaTimeModule());
       mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
@@ -361,34 +366,37 @@ class GarminServiceTest {
           RecentDailySummaries.class
                                                             );
 
-      // Use the expected latestDay from the loaded object as the reference date.
+      // Use the expected latestDay (as a LocalDate) from the loaded object as the reference date.
+      // Since the model stores latestDay as LocalDate, we can directly use it.
       LocalDate refDate = expectedRecent.latestDay();
 
       // Create a dummy CurrentDaySummary using the reference date.
+      // The CurrentDaySummary model uses LocalDate for the day field.
       CurrentDaySummary dummyDaily = new CurrentDaySummary(
           null,
           refDate,
-          DataParsingUtils.mapToBaseSummary(mockSQLiteDataDay.getFirst())
+          DataParsingUtils.mapToBaseSummary(mockSQLiteDataDay.get(0))
       );
-      // Create a list of 7 identical dummy objects (immutable list is fine since service makes a mutable copy).
+      // Create a list of 7 identical dummy objects (an immutable list is fine since the service makes a mutable copy).
       List<CurrentDaySummary> dummyList = List.of(
           dummyDaily, dummyDaily, dummyDaily, dummyDaily, dummyDaily, dummyDaily, dummyDaily
                                                  );
 
-      // Use the new repository method with the reference date.
+      // Use the repository method with the reference date.
       when(currentDaySummaryRepo.findTop7ByDayLessThanEqualOrderByDayDesc(refDate)).thenReturn(dummyList);
 
-      // Call the service method with the reference date.
-      garminService.processAndSaveRecentDailySummaries(String.valueOf(refDate));
+      // Call the service method with the reference date as a string.
+      garminProcessingService.processAndSaveRecentDailySummaries(refDate.toString());
 
       // Capture the RecentDailySummaries object saved to MongoDB.
       ArgumentCaptor<RecentDailySummaries> captor = ArgumentCaptor.forClass(RecentDailySummaries.class);
       verify(recentDailySummariesRepo).save(captor.capture());
       RecentDailySummaries savedRecent = captor.getValue();
 
-      assertNotNull(savedRecent);
-      // Verify that the latestDay field matches the expected value from the mock file.
-      assertEquals(expectedRecent.latestDay(), savedRecent.latestDay());
+      assertNotNull(savedRecent, "The saved RecentDailySummaries object should not be null");
+      // Verify that the latestDay field matches the expected value.
+      // Convert both LocalDate values to strings for comparison.
+      assertEquals(expectedRecent.latestDay().toString(), savedRecent.latestDay().toString());
       // Optionally, add further assertions to check other fields.
 
       // Ensure that validation was called.
@@ -405,10 +413,9 @@ class GarminServiceTest {
       // Simulate no daily summaries found.
       when(currentDaySummaryRepo.findTop7ByDayLessThanEqualOrderByDayDesc(refDate)).thenReturn(List.of());
 
-      garminService.processAndSaveRecentDailySummaries(String.valueOf(refDate));
+      garminProcessingService.processAndSaveRecentDailySummaries(refDate.toString());
 
       // Verify that recentDailySummariesRepo.save was never called.
       verify(recentDailySummariesRepo, never()).save(any());
    }
-
 }
